# jogre

./: Cargo.toml  README.md
jmap-proto/: Cargo.toml
jmap-proto/src/: common.rs  errors.rs  lib.rs  util.rs
jmap-proto/src/endpoints/: mod.rs  session.rs
jmap-proto/src/endpoints/blob/: copy.rs  download.rs  mod.rs  upload.rs
jmap-proto/src/endpoints/core/: echo.rs
jmap-proto/src/endpoints/object/: changes.rs  copy.rs  get.rs  mod.rs  query.rs  query_changes.rs  set.rs
jmap-proto/src/events/: mod.rs  state_change.rs
jmap-proto/src/extensions/: mod.rs  sharing.rs
jmap-proto/src/extensions/contacts/: js_contact.rs  mod.rs
jogre-server/: Cargo.toml  config.toml
jogre-server/src/: config.rs  context.rs  main.rs  store.rs  util.rs
jogre-server/src/context/: oauth2.rs
jogre-server/src/extensions/: contacts.rs  core.rs  mod.rs  router.rs  sharing.rs
jogre-server/src/layers/: auth_required.rs  logger.rs  mod.rs
jogre-server/src/methods/: mod.rs  session.rs
jogre-server/src/methods/api/: mod.rs
jogre-server/src/methods/oauth/: authorize.rs  mod.rs  refresh.rs  token.rs
jogre-server/src/store/: rocksdb.rs
jogre-server/templates/auth/: login.html
