[package]
name = "jogre-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jmap-proto = { path = "../jmap-proto" }

argon2 = "0.5"
askama = "0.12"
axum = "0.6"
axum-macros = "0.3"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
futures = "0.3.28"
hex = "0.4"
hmac = "0.12"
oxide-auth = "0.5"
oxide-auth-async = "0.1"
oxide-auth-axum = "0.3"
rand = "0.8"
rocksdb = "0.21"
tokio = { version = "1.32", features = ["full"] }
tower = "0.4"
tower-cookies = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
